styles.css
/* ... */
.nav__ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
    width: 100%;
}

.nav__ul a {
    text-decoration: none;
    color: white;
    font-size: 1.6rem;
    font-weight: 500;
    padding: 10px;
    margin: 0 10px;
    border-radius: 1.8rem;
    transition: background-color .2s;
}

.nav__ul a:hover {
    background-color: #2C3333c0;
}

.nav__respbtn {
    color: white;
    font-size: 3rem;
    display: none;
    justify-content: flex-end;
}

/* MAIN */
main {
    grid-area: main;
    display: grid;
    place-content: center;
}

/* Contenedor de contenido principal */
.block {
    width: 100%;
    background-color: #395B6430;
    overflow: hidden;
    border-radius: 0 100px 0 100px;
    border: 2px white inset;
    box-shadow: 0 3px 7px 0px rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
}

/* AboutMe */
.aboutMe {
    max-width: 900px;
    width: 100%;
    height: 400px;
}

.aboutMe__img {
    display: inline-block;
    width: 50%;
    height: 400px;
    background: url(./assets/profile.jpg) center center/cover;
}

.aboutMe__data {
    width: 50%;
    padding: 0 4px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.aboutMe__data h2 {
    text-align: center;
    margin: 20px;
    font-size: 3rem;
    color: white;
}

.aboutMe__data p {
    text-align: center;
    margin: 20px;
    padding: 0 20px;
    font-size: 1.8rem;
    line-height: 1.6;
    color: white;
}

/* Tech */
.tech {
    max-width: 900px;
    width: 900px;
    height: 400px;
}

/* Inicio de Tabla */
.tech__table {
    width: 92%;
}

/* Cabecera de Table */
.tech__table__head tr {
    background-color: #2C3333df;
}

.tech__table__head__element {
    width: 30%;
    color: white;
    font-size: 1.9rem;
}

.element--sec {
    width: 70%;
}

/* Cuerpo de Tabla */
.tech__table__body tr {
    height: 50px;
    text-align: center;
}

.tech__table__body__name {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 48px;
    font-size: 3rem;
    color: white;
}
/* Tecnologias - Iconos */
.tech__icon {
    margin-right: 10px;
}

.tech__name {
    font-size: 1.4rem;
}

/* Tecnologias - ProgressBar */
.prgbar {
    width: 90%;
    height: 40px;
    position: relative;
}

/* Proyectos */
.proy {
    width: 100%;
    margin: 20px 0;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 20px;
    padding: 20px;
    border-radius: 0;
}

/* Contenedor de Proyectos */
.proy__card {
    width: 280px;
    height: 280px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid #fff;
    box-shadow: 0px 0px 20px #000;
}

.proy__title {
    width: 100%;
    text-align: center;
    margin: 10px 0;
    font-size: 2.2rem;
    color: white;
}

.img__container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 50%;
}

.proy__img {
    width: 100%;
    object-fit: cover;
    border: solid 1px white;
}

.proy__buttons {
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.proy__button {
    background-color: #2666CF1f;
    color: white;
    width: 110px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
    border-radius: 20px;
    font-size: 1.4rem;
    border: 1px solid white;
    transition: background-color .2s;
}

.proy__button:hover {
    background-color: #2666CF78;
}

/* Main Contacto */
.contacto {
    width: 900px;
    height: 400px;
}

/* Contenedor de Contacto */
.contacto__box {
    background-color: #395B6420;
    width: 50%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

/* Redes Sociales */
.social {
    margin-top: 10px;
    width: 100%;
    display: flex;
    justify-content: space-around;
}

.socialIcon {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 60px;
    height: 60px;
    border-radius: 20%;
    text-decoration: none;
    background-color: #2666CF85;
    transition: background-color .2s;
}

.socialIcon:hover {
    background-color: #2666CFE5;
}

.sico {
    font-size: 4rem;
    color: white;
}

/* Mapa */
.map {
    height: 80%;
    width: 100%;
}

.map__iframe {
    height: 100%;
    width: 100%;
}

/* Correo Electronico */
.inbox {
    justify-content: center;
    border-left: 1px solid white;
}

.inbox__title {
    font-size: 2.4rem;
    color: white;
}

.inbox__data {
    padding: 0 40px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.inbox__label {
    color: white;
    font-size: 1.4rem;
    width: 100%;
    text-align: left;
}

.inbox__input {
    width: 100%;
    outline: none;
    font-family: 'Lora', serif;
    resize: none;
    padding: 5px 8px;
    border-radius: 0 10px 0 10px;
    border: none;
    font-size: 1.4rem;
}

.inbox__buttons {
    display: flex;
    justify-content: center;
    gap: 10px;
    width: 100%;
}

/* Contenedor Botones */
.cont__button {
    width: 100px;
    margin: 10px 20px 0 20px;
    padding: 2px;
    background-color: #2666CF1f;
    border: 1px solid #fff;
    color: white;
    cursor: pointer;
    border-radius: 20px;
    font-size: 1.4rem;
    transition: background-color .2s;
    border: 1px solid white;
}

.cont__button:hover {
    background-color: #2666CF78;
}

.button--clean {
    background-color: #395B64;
}

/* Footer */
footer {
    background-color: #2666CF55;
    bottom: 0;
    width: 100%;
    padding: 6px 0;
    grid-area: footer;
}

footer h4 {
    color: white;
    text-align: center;
    font-size: 1.3rem;
    font-weight: 100;
}
/* ... */

